--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,113 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background: #7532;
-   
 }
 
+h1, h2 {
+  text-align: center;
+}
 
+.centered {
+  text-align: center;
+}
+
+/* Nav */
+
+.some-navbar {
+  background-color: #FB5906 !important;
+  color: #F2F2F2;
+}
+
+.some-navbar .nav-link {
+  color: #F2F2F2;
+}
+
+.some-navbar .nav-link:hover {
+  color: #70D95F;
+}
+
+.some-navbar .navbar-brand {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.some-navbar .nav-link.active {
+  background-color: #70D95F;
+  color: black;
+}
+
+/* Buttons */
+
+.button-red {
+  background-color: #DE0015;
+  color: #F2F2F2;
+  border-radius: 8px;
+  border: none;
+  padding: 5px 20px;
+  width: 90%;
+}
+
+.button-red:hover {
+  background-color: #DE0015;
+  color: black;
+}
+
+.button-green {
+  background-color: #70D95F;
+  color: #F2F2F2;
+  border-radius: 8px;
+  border: none;
+  padding: 5px 20px;
+  width: 90%;
+}
+
+.button-green:hover {
+  background-color: #70D95F;
+  color: black;
+}
+/* Link */
+
+.my-link {
+  color: #DE0015;
+  text-decoration: underline #9FD5F7;
+}
+
+.my-link:hover {
+  color: #70D95F;
+  text-decoration: underline  #70D95F;
+}
+
+/* Forms */
+
+.input-group {
+  display: block;
+  width: 90%;
+  margin-bottom: 10px;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  padding-top: 40px;
+  
+}
+
+input {
+  border: 1px solid #9FD5F7;
+  border-radius: 8px;
+  padding: 4px;;
+}
+
+/* Cards */
+
+/* Images */
+
+.img-logo {
+  margin-bottom: 20px;
+}
+
+.nav-logo {
+  width: 4rem;
+}
