--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,36 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   background: #7532;
+  margin-bottom: 50px;
 }
 
 h1, h2 {
   text-align: center;
+  padding-top: 20px;
+}
+
+h2 {
+  padding-top: 20px;
+}
+
+h5 {
+  color: #FB5906;
 }
 
 .centered {
   text-align: center;
+}
+
+.layout-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  padding-top: 40px;
+}
+
+.centered-items {
+  align-items: center;
 }
 
 
@@ -70,11 +92,22 @@ h1, h2 {
   border: none;
   padding: 5px 20px;
   width: 90%;
+  margin-bottom: 5px;
 }
 
 .button-green:hover {
   background-color: #70D95F;
   color: black;
+}
+
+.button-emoji {
+  background-color: #70D95F;
+  color: #F2F2F2;
+  border-radius: 8px;
+  border: none;
+  padding: 5px;
+  width: 10%;
+  margin: 10px;
 }
 /* Link */
 
@@ -97,15 +130,6 @@ h1, h2 {
   margin-bottom: 10px;
 }
 
-.form-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  padding-top: 40px;
-  
-}
-
 input {
   border: 1px solid #9FD5F7;
   border-radius: 8px;
@@ -122,15 +146,18 @@ input {
   width: 4rem;
 }
 
-/*Cars */
-
+/*Cards */
 
 /* Footer */
 
 footer {
- margin-top: 20px;
- height: 40px; 
+ position: fixed;
+ left: 0;
+ bottom: 0;
+ width: 100%;
+ text-align: center;
  background-color: #FB5906;
+ height: 35px;
 }
 
 .footer-logo {
